<resources>
    <string name="app_name">challenge8</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Nombre Empresa</string>
    <string name="url">Pagina Web</string>
    <string name="phone">Telefono</string>
    <string name="email">Email</string>
    <string name="services">Productos y Servicios</string>
    <string name="class_enterprise">Clasificacion</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="filter">Aplicar Filtro</string>
    <string name="deleteFilter">Eliminar Filtro</string>
    <string-array name="class_types">
        <item>Consultoria</item>
        <item>Desarrollo a la medida</item>
        <item>Fabrica de software</item>
    </string-array>
    <string-array name="class_types_filter">
        <item>-</item>
        <item>Consultoria</item>
        <item>Desarrollo a la medida</item>
        <item>Fabrica de software</item>
    </string-array>
</resources>