<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DisplayContact" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp">
<!--        android:paddingBottom="@dimen/activity_vertical_margin"-->
<!--        android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--        android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--        android:paddingTop="@dimen/activity_vertical_margin">-->

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="text"></EditText>
        <requestFocus />

        <EditText
            android:id="@+id/editTextUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="text"></EditText>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextUrl"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="phone|text" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPhone"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="textEmailAddress" />



        <EditText
            android:id="@+id/editTextServices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignRight="@+id/editTextName"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="text" />


    <Spinner
        android:id="@+id/editTextClass_enterprise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextServices"
        android:layout_alignLeft="@+id/editTextName"
        android:entries="@array/class_types"
        android:ems = "10"
        android:layout_marginTop = "35dp"
         />

            <TextView
            android:id="@+id/textView1"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="-14dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextUrl"
            android:layout_alignLeft="@+id/textView1"
            android:layout_marginTop="55dp"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextPhone"
            android:layout_alignLeft="@+id/textView1"
            android:layout_marginTop="55dp"
            android:text="@string/phone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
           android:id="@+id/textView2" android:layout_width="110dp"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/editTextEmail"
           android:layout_alignLeft="@+id/textView1"
           android:text="@string/email"
           android:layout_marginTop="55dp"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
           android:id="@+id/textView4" android:layout_width="110dp"
           android:layout_height="wrap_content" android:layout_alignBottom="@+id/editTextClass_enterprise"
           android:layout_alignLeft="@+id/textView5"
           android:text="@string/class_enterprise"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextServices"
            android:layout_alignBottom="@+id/editTextServices"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_toLeftOf="@+id/editTextEmail"
            android:text="@string/services"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-30dp"
            android:layout_marginBottom="0dp"
            android:onClick="run"
            android:text="@string/save" />

    </RelativeLayout>
</ScrollView>